@@ -292,6 +292,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
   public Job( Repository repository, JobMeta jobMeta, LoggingObjectInterface parentLogging ) {
     this.rep = repository;
     this.jobMeta = jobMeta;
+    this.containerObjectId = jobMeta.getContainerObjectId();
     this.parentLoggingObject = parentLogging;
 
     init();
@@ -300,7 +301,10 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
 
     this.log = new LogChannel( this, parentLogging );
     this.logLevel = log.getLogLevel();
-    this.containerObjectId = log.getContainerObjectId();
+
+    if ( this.containerObjectId == null ) {
+      this.containerObjectId = log.getContainerObjectId();
+    }
   }
 
   public Job() {
@@ -330,7 +334,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
 
       // create the class
       // Try to instantiate this one...
-      Job job = (Job) jobClass.newInstance();
+      Job job = (Job) jobClass.getDeclaredConstructor().newInstance();
 
       // Done!
       return job;
@@ -354,7 +358,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
   /**
    * Threads main loop: called by Thread.start();
    */
-  public void run() {
+  @Override public void run() {
 
     ExecutorService heartbeat = null; // this job's heartbeat scheduled executor
 
@@ -789,7 +793,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
           threadEntries.add( nextEntry );
 
           Runnable runnable = new Runnable() {
-            public void run() {
+            @Override public void run() {
               try {
                 Result threadResult = execute( nr + 1, newResult, nextEntry, jobEntryCopy, nextComment );
                 threadResults.add( threadResult );
@@ -972,7 +976,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
 
       try {
         // See if we have to add a batch id...
-        Long id_batch = new Long( 1 );
+        Long id_batch = 1L;
         if ( jobMeta.getJobLogTable().isBatchIdUsed() ) {
           id_batch = logcon.getNextBatchId( ldb, schemaName, tableName, jobLogTable.getKeyField().getFieldName() );
           setBatchId( id_batch.longValue() );
@@ -1008,7 +1012,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
         if ( intervalInSeconds > 0 ) {
           final Timer timer = new Timer( getName() + " - interval logging timer" );
           TimerTask timerTask = new TimerTask() {
-            public void run() {
+            @Override public void run() {
               try {
                 endProcessing();
               } catch ( Exception e ) {
@@ -1024,7 +1028,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
           timer.schedule( timerTask, intervalInSeconds * 1000, intervalInSeconds * 1000 );
 
           addJobListener( new JobAdapter() {
-            public void jobFinished( Job job ) {
+            @Override public void jobFinished( Job job ) {
               timer.cancel();
             }
           } );
@@ -1034,7 +1038,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
         // log record...
         //
         addJobListener( new JobAdapter() {
-          public void jobFinished( Job job ) throws KettleException {
+          @Override public void jobFinished( Job job ) throws KettleException {
             try {
               endProcessing();
             } catch ( KettleJobException e ) {
@@ -1061,7 +1065,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
     JobEntryLogTable jobEntryLogTable = jobMeta.getJobEntryLogTable();
     if ( jobEntryLogTable.isDefined() ) {
       addJobListener( new JobAdapter() {
-        public void jobFinished( Job job ) throws KettleException {
+        @Override public void jobFinished( Job job ) throws KettleException {
           try {
             writeJobEntryLogInformation();
           } catch ( KettleException e ) {
@@ -1079,7 +1083,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
     if ( channelLogTable.isDefined() ) {
       addJobListener( new JobAdapter() {
 
-        public void jobFinished( Job job ) throws KettleException {
+        @Override public void jobFinished( Job job ) throws KettleException {
           try {
             writeLogChannelInformation();
           } catch ( KettleException e ) {
@@ -1408,7 +1412,8 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *          the new internal kettle variables.
    */
   public void setInternalKettleVariables( VariableSpace var ) {
-    if ( jobMeta != null && jobMeta.getFilename() != null ) { // we have a finename that's defined.
+    boolean hasFilename = jobMeta != null && !Utils.isEmpty( jobMeta.getFilename() );
+    if ( hasFilename ) { // we have a finename that's defined.
       try {
         FileObject fileObject = KettleVFS.getFileObject( jobMeta.getFilename(), this );
         FileName fileName = fileObject.getName();
@@ -1452,10 +1457,17 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
       if ( "/".equals( variables.getVariable( Const.INTERNAL_VARIABLE_ENTRY_CURRENT_DIRECTORY ) ) ) {
         variables.setVariable( Const.INTERNAL_VARIABLE_ENTRY_CURRENT_DIRECTORY, "" );
       }
-    } else {
-      variables.setVariable( Const.INTERNAL_VARIABLE_ENTRY_CURRENT_DIRECTORY, variables.getVariable(
-          Const.INTERNAL_VARIABLE_JOB_FILENAME_DIRECTORY ) );
     }
+
+    setInternalEntryCurrentDirectory( hasFilename, hasRepoDir );
+
+  }
+
+  protected void setInternalEntryCurrentDirectory( boolean hasFilename, boolean hasRepoDir  ) {
+    variables.setVariable( Const.INTERNAL_VARIABLE_ENTRY_CURRENT_DIRECTORY, variables.getVariable(
+      hasRepoDir ? Const.INTERNAL_VARIABLE_JOB_REPOSITORY_DIRECTORY
+        : hasFilename ? Const.INTERNAL_VARIABLE_JOB_FILENAME_DIRECTORY
+        : Const.INTERNAL_VARIABLE_ENTRY_CURRENT_DIRECTORY ) );
   }
 
   /*
@@ -1463,7 +1475,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#copyVariablesFrom(org.pentaho.di.core.variables.VariableSpace)
    */
-  public void copyVariablesFrom( VariableSpace space ) {
+  @Override public void copyVariablesFrom( VariableSpace space ) {
     variables.copyVariablesFrom( space );
   }
 
@@ -1472,7 +1484,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#environmentSubstitute(java.lang.String)
    */
-  public String environmentSubstitute( String aString ) {
+  @Override public String environmentSubstitute( String aString ) {
     return variables.environmentSubstitute( aString );
   }
 
@@ -1481,11 +1493,11 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#environmentSubstitute(java.lang.String[])
    */
-  public String[] environmentSubstitute( String[] aString ) {
+  @Override public String[] environmentSubstitute( String[] aString ) {
     return variables.environmentSubstitute( aString );
   }
 
-  public String fieldSubstitute( String aString, RowMetaInterface rowMeta, Object[] rowData )
+  @Override public String fieldSubstitute( String aString, RowMetaInterface rowMeta, Object[] rowData )
     throws KettleValueException {
     return variables.fieldSubstitute( aString, rowMeta, rowData );
   }
@@ -1495,7 +1507,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#getParentVariableSpace()
    */
-  public VariableSpace getParentVariableSpace() {
+  @Override public VariableSpace getParentVariableSpace() {
     return variables.getParentVariableSpace();
   }
 
@@ -1505,7 +1517,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    * @see
    * org.pentaho.di.core.variables.VariableSpace#setParentVariableSpace(org.pentaho.di.core.variables.VariableSpace)
    */
-  public void setParentVariableSpace( VariableSpace parent ) {
+  @Override public void setParentVariableSpace( VariableSpace parent ) {
     variables.setParentVariableSpace( parent );
   }
 
@@ -1514,7 +1526,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#getVariable(java.lang.String, java.lang.String)
    */
-  public String getVariable( String variableName, String defaultValue ) {
+  @Override public String getVariable( String variableName, String defaultValue ) {
     return variables.getVariable( variableName, defaultValue );
   }
 
@@ -1523,7 +1535,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#getVariable(java.lang.String)
    */
-  public String getVariable( String variableName ) {
+  @Override public String getVariable( String variableName ) {
     return variables.getVariable( variableName );
   }
 
@@ -1532,7 +1544,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#getBooleanValueOfVariable(java.lang.String, boolean)
    */
-  public boolean getBooleanValueOfVariable( String variableName, boolean defaultValue ) {
+  @Override public boolean getBooleanValueOfVariable( String variableName, boolean defaultValue ) {
     if ( !Utils.isEmpty( variableName ) ) {
       String value = environmentSubstitute( variableName );
       if ( !Utils.isEmpty( value ) ) {
@@ -1548,7 +1560,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    * @see
    * org.pentaho.di.core.variables.VariableSpace#initializeVariablesFrom(org.pentaho.di.core.variables.VariableSpace)
    */
-  public void initializeVariablesFrom( VariableSpace parent ) {
+  @Override public void initializeVariablesFrom( VariableSpace parent ) {
     variables.initializeVariablesFrom( parent );
   }
 
@@ -1557,7 +1569,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#listVariables()
    */
-  public String[] listVariables() {
+  @Override public String[] listVariables() {
     return variables.listVariables();
   }
 
@@ -1566,7 +1578,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#setVariable(java.lang.String, java.lang.String)
    */
-  public void setVariable( String variableName, String variableValue ) {
+  @Override public void setVariable( String variableName, String variableValue ) {
     variables.setVariable( variableName, variableValue );
   }
 
@@ -1575,7 +1587,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#shareVariablesWith(org.pentaho.di.core.variables.VariableSpace)
    */
-  public void shareVariablesWith( VariableSpace space ) {
+  @Override public void shareVariablesWith( VariableSpace space ) {
     variables = space;
   }
 
@@ -1584,7 +1596,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.variables.VariableSpace#injectVariables(java.util.Map)
    */
-  public void injectVariables( Map<String, String> prop ) {
+  @Override public void injectVariables( Map<String, String> prop ) {
     variables.injectVariables( prop );
   }
 
@@ -1740,7 +1752,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    * @see org.pentaho.di.core.parameters.NamedParams#addParameterDefinition(java.lang.String, java.lang.String,
    * java.lang.String)
    */
-  public void addParameterDefinition( String key, String defValue, String description ) throws DuplicateParamException {
+  @Override public void addParameterDefinition( String key, String defValue, String description ) throws DuplicateParamException {
     namedParams.addParameterDefinition( key, defValue, description );
   }
 
@@ -1749,7 +1761,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.parameters.NamedParams#getParameterDescription(java.lang.String)
    */
-  public String getParameterDescription( String key ) throws UnknownParamException {
+  @Override public String getParameterDescription( String key ) throws UnknownParamException {
     return namedParams.getParameterDescription( key );
   }
 
@@ -1758,7 +1770,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.parameters.NamedParams#getParameterDefault(java.lang.String)
    */
-  public String getParameterDefault( String key ) throws UnknownParamException {
+  @Override public String getParameterDefault( String key ) throws UnknownParamException {
     return namedParams.getParameterDefault( key );
   }
 
@@ -1767,7 +1779,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.parameters.NamedParams#getParameterValue(java.lang.String)
    */
-  public String getParameterValue( String key ) throws UnknownParamException {
+  @Override public String getParameterValue( String key ) throws UnknownParamException {
     return namedParams.getParameterValue( key );
   }
 
@@ -1776,7 +1788,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.parameters.NamedParams#listParameters()
    */
-  public String[] listParameters() {
+  @Override public String[] listParameters() {
     return namedParams.listParameters();
   }
 
@@ -1785,7 +1797,7 @@ public class Job extends Thread implements VariableSpace, NamedParams, HasLogCha
    *
    * @see org.pentaho.di.core.parameters.NamedParams#setParameterValue(java.lang.String, java.lang.String)
    */
-  public void setParameterValue( String key, String value ) throws UnknownParamException {
+  @Override public void setParameterValue( String key, String value ) throws UnknownParamException {
     namedParams.setParameterValue( key, value );
   }
 
